--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=gym-app
 spring.datasource.url=jdbc:mysql://localhost:3306/gym
 spring.datasource.username=root
 spring.datasource.password=8585Abed8585oK
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # application.properties
 jwt.secret=your_jwt_secret_key
