--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,15 @@
+# Configuration de la base de données
 spring.application.name=gym-app
 spring.datasource.url=jdbc:mysql://localhost:3306/gym
 spring.datasource.username=root
 spring.datasource.password=8585Abed8585oK
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-# application.properties
-jwt.secret=your_jwt_secret_key
+
+# Configuration JWT
+jwt.secret=mysecretkey
+jwt.expiration=3600
+
+# Activer les logs de debug
+logging.level.org.springframework=DEBUG
+logging.level.com.gym.gym_app=DEBUG
