Mise à jour de la configuration de sécurité : ajout de nouveaux endpoints autorisés et amélioration de la gestion CORS. Modification du contrôleur d'authentification pour retourner un token JWT avec gestion des erreurs. Désactivation des logs de debug dans la configuration.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,5 @@ jwt.secret=mysecretkey
 jwt.expiration=3600
 
 # Activer les logs de debug
-logging.level.org.springframework=DEBUG
-logging.level.com.gym.gym_app=DEBUG
+# logging.level.org.springframework=DEBUG
+# logging.level.com.gym.gym_app=DEBUG
